Adjust popup menu widths to avoid wrapping.

--- a/@utahdts/utah-design-system/css/6-components/base-components/navigation/_vertical-menu.scss
+++ b/@utahdts/utah-design-system/css/6-components/base-components/navigation/_vertical-menu.scss
@@ -48,7 +48,7 @@
     }
     &__link-text {
       flex: 1 0 auto;
-      max-width: 100%;
+      max-width: calc(100% - 12px);
     }
     &__divider {
       display: block;
