--- a/@utahdts/utah-design-system/css/6-components/base-components/popups/_popups.scss
+++ b/@utahdts/utah-design-system/css/6-components/base-components/popups/_popups.scss
@@ -43,7 +43,7 @@ $dsc: rgb(0,0,0);
       border-radius: var(--radius-small);
       border: 1px solid var(--gray-3-1-contrast);
       box-sizing: border-box;
-      min-width: 180px;
+      min-width: 200px;
       padding: var(--spacing-s);
       transition: transform 100ms ease-in-out;
       box-shadow: var(--elevation-small);
